--- a/index.html
+++ b/index.html
@@ -22,71 +22,42 @@
 
   <meta name="theme-color" content="#fafafa">
   <script src="https://kit.fontawesome.com/cf08a85db8.js" crossorigin="anonymous"></script>
-  <script src="js\.js"></script>
 </head>
 
 <body>
     <header>
-        <div class="content-wrapper">
-            <div class="ewhite-wordmark">
+            <div class="logo-wrapper">
                 <!-- ewhite-wordmark div uses Romanesco type from Google fonts -->
-                <p>E. White The Brand</p>
+                <h1 class="ewhite-wordmark">E. White The Brand</h1>
             </div>
-            <div class="topnav">
-                <!-- Nav will use the Bars icon from awsomefonts. Rest of the nav options will be revealed/hidden on the click of the bars-->
-                <!-- <i class="fas fa-bars"></i> -->
-                <!-- Top Navigation Menu -->
-
-                <!-- Navigation links (hidden by default) -->
-                <div id="menuitems">
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-                 </div>
-
-                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">          <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                    <div class="menu-bars" onclick="rotateBars(this)">
+            <nav>
+            <!-- Nav will use the Bars icon from awsomefonts. Rest of the nav options will be revealed/hidden on the click of the bars-->
+                <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Biography</a></li>
+                    <li><a href="#">Discography</a></li>
+                    <li><a href="#">Services</a></li>
+                    <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+                <div class="menu-toggle">
+                    <i class="fas fa-bars" aria-hidden="true"></i>
+                </div>
+                    <!-- <div class="menu-bars" onclick="rotateBars(this)">
                         <div class="bar1"></div>
                         <div class="bar2"></div>
                         <div class="bar3"></div>
-                    </div>
-                </a>
-            </div>
-        </div>
+                    </div> -->
+
     </header>
 
-    <main>
-        <!-- Main is divided into three sections. The content wrappers for each section will be empty. Background Images will be loaded via CSS -->
-        <section class="top-third">
-            <div class="content-wrapper">
-            </div>
-        </section>
-        <section class="middle-third">
-            <div class="content-wrapper">
-            </div>
-        </section>
-        <section class="bottom-third">
-            <div class="content-wrapper">
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <div class="content-wrapper">
-            <div class="footer-content"> <!-- These are the links & awesomefont icons for the footer -->
-                <a href=""><i class="fab fa-instagram"></i></a>
-                <a href=""><i class="fab fa-twitter"></i></a>
-                <a href=""><i class="fab fa-spotify"></i></a>
-                <a href=""><i class="fab fa-soundcloud"></i></a>
-                <a href=""><i class="fas fa-at"></i></a>
-            </div>
-        </div>
-    </footer>
 
   <script src="js/vendor/modernizr-3.11.2.min.js"></script>
   <script src="js/plugins.js"></script>
+  <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
   <script src="js/main.js"></script>
+
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
@@ -94,6 +65,8 @@
     ga('create', 'UA-XXXXX-Y', 'auto'); ga('set', 'anonymizeIp', true); ga('set', 'transport', 'beacon'); ga('send', 'pageview')
   </script>
   <script src="https://www.google-analytics.com/analytics.js" async></script>
+
+
 </body>
 
 </html>
