--- a/index.html
+++ b/index.html
@@ -27,32 +27,23 @@
 
 <body>
     <header>
-        <div class="content-wrapper">
-            <div class="ewhite-wordmark">
-                <!-- ewhite-wordmark div uses Romanesco type from Google fonts -->
-                <p>E. White The Brand</p>
-            </div>
-            <div class="topnav">
-                <!-- Nav will use the Bars icon from awsomefonts. Rest of the nav options will be revealed/hidden on the click of the bars-->
-                <!-- <i class="fas fa-bars"></i> -->
-                <!-- Top Navigation Menu -->
-
-                <!-- Navigation links (hidden by default) -->
-                <div id="menuitems">
-                    <a href="#news">News</a>
-                    <a href="#contact">Contact</a>
-                    <a href="#about">About</a>
-                 </div>
-
-                <a href="javascript:void(0);" class="icon" onclick="toggleMenu()">          <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                    <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
-                    <div class="menu-bars" onclick="rotateBars(this)">
-                        <div class="bar1"></div>
-                        <div class="bar2"></div>
-                        <div class="bar3"></div>
-                    </div>
-                </a>
-            </div>
+        <div class="logo-wrapper">
+            <!-- ewhite-wordmark div uses Romanesco type from Google fonts -->
+            <h1 class="ewhite-wordmark">E. White The Brand</h1>
+        </div>
+        <nav>
+        <!-- Nav will use the Bars icon from awsomefonts. Rest of the nav options will be revealed/hidden on the click of the bars-->
+            <!-- "Hamburger menu" / "Bar icon" to toggle the navigation links -->
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">Biography</a></li>
+                <li><a href="#">Discography</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+        <div class="menu-toggle">
+            <i class="fas fa-bars" aria-hidden="true"></i>
         </div>
     </header>
 
